--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,11 +9,9 @@ ru:
       cannot_be_overwritten: "[%{service_class_name}] Нельзя перезаписать следующие методы: %{list_of_methods}"
     inputs:
       undefined:
-        getter: "[%{service_class_name}] Неизвестный атрибут `%{input_name}`"
-        setter: "[%{service_class_name}] Неизвестный атрибут `%{input_name}`"
+        for_fetch: "[%{service_class_name}] Неизвестный атрибут `%{input_name}`"
+        for_assign: "[%{service_class_name}] Неизвестный атрибут `%{input_name}`"
       validations:
-        inclusion:
-          default_error: "[%{service_class_name}] Неправильное значение в `%{input_name}`, должно быть одним из `%{input_inclusion}`"
         must:
           default_error: "[%{service_class_name}] Атрибут `%{input_name}` должен \"%{code}\""
           syntax_error: "[%{service_class_name}] Синтаксическая ошибка внутри `%{code}` атрибута `%{input_name}`: %{exception_message}"
@@ -26,18 +24,26 @@ ru:
               default: "[%{service_class_name}] Атрибут `%{input_name}` не соответствует формату `%{format_name}`"
               wrong_pattern: "[%{service_class_name}] Атрибут `%{input_name}` не соответствует формату `%{format_name}`"
               unknown: "[%{service_class_name}] Указан неизвестный формат `%{format_name}` у атрибута `%{input_name}`"
+            inclusion:
+              default: "[%{service_class_name}] Неправильное значение в `%{input_name}`, должно быть одним из `%{input_inclusion}`, получено `%{value}`"
             min:
               default: "[%{service_class_name}] Атрибут `%{input_name}` получил значение `%{value}`, которое меньше `%{option_value}`"
             max:
               default: "[%{service_class_name}] Атрибут `%{input_name}` получил значение `%{value}`, которое больше `%{option_value}`"
+            multiple_of:
+              default: "[%{service_class_name}] Атрибут `%{input_name}` имеет значение `%{value}`, которое не кратно `%{option_value}`"
+              blank: "[%{service_class_name}] Атрибут `%{input_name}` имеет недопустимое значение `%{option_value}` в опции `%{option_name}`"
+              divided_by_0: "[%{service_class_name}] Атрибут `%{input_name}` имеет недопустимое значение `%{option_value}` в опции `%{option_name}`"
+            schema:
+              wrong_type: "[%{service_class_name}] Неправильный тип атрибута `%{input_name}`, ожидалось `%{expected_type}`, получено `%{given_type}`"
+              wrong_element_type: "[%{service_class_name}] Неправильный тип в хеше атрибута `%{input_name}`, для `%{key_name}` ожидалось `%{expected_type}`, получено `%{given_type}`"
+              wrong_element_value: "[%{service_class_name}] Неправильное значение в хеше атрибута `%{input_name}`, для `%{key_name}` ожидалось значение с типом `%{expected_type}`, получено `%{given_type}`"
         required:
           default_error:
             default: "[%{service_class_name}] Обязательный атрибут `%{input_name}` отсутствует"
         type:
           default_error:
             default: "[%{service_class_name}] Неправильный тип атрибута `%{input_name}`, ожидалось `%{expected_type}`, получено `%{given_type}`"
-            for_hash:
-              wrong_element_type: "[%{service_class_name}] Неправильный тип в хеше атрибута `%{input_name}`, для `%{key_name}` ожидалось `%{expected_type}`, получено `%{given_type}`"
       tools:
         find_unnecessary:
           error: "[%{service_class_name}] Неожиданные атрибуты: `%{unnecessary_attributes}`"
@@ -45,11 +51,9 @@ ru:
           error: "[%{service_class_name}] Конфликт в опциях атрибута `%{input_name}`: `%{conflict_code}`"
     internals:
       undefined:
-        getter: "[%{service_class_name}] Неизвестный внутренний атрибут `%{internal_name}`"
-        setter: "[%{service_class_name}] Неизвестный внутренний атрибут `%{internal_name}`"
+        for_fetch: "[%{service_class_name}] Неизвестный внутренний атрибут `%{internal_name}`"
+        for_assign: "[%{service_class_name}] Неизвестный внутренний атрибут `%{internal_name}`"
       validations:
-        inclusion:
-          default_error: "[%{service_class_name}] Неправильное значение в `%{internal_name}`, должно быть одним из `%{internal_inclusion}`"
         must:
           default_error: "[%{service_class_name}] Внутренний атрибут `%{internal_name}` должен \"%{code}\""
           syntax_error: "[%{service_class_name}] Синтаксическая ошибка внутри `%{code}` внутреннего атрибута `%{internal_name}`: %{exception_message}"
@@ -62,22 +66,28 @@ ru:
               default: "[%{service_class_name}] Внутренний атрибут `%{internal_name}` не соответствует формату `%{format_name}`"
               wrong_pattern: "[%{service_class_name}] Внутренний атрибут `%{internal_name}` не соответствует формату `%{format_name}`"
               unknown: "[%{service_class_name}] Указан неизвестный формат `%{format_name}` у внутреннего атрибута `%{internal_name}`"
+            inclusion:
+              default: "[%{service_class_name}] Неправильное значение в `%{internal_name}`, должно быть одним из `%{internal_inclusion}`, получено `%{value}`"
             min:
               default: "[%{service_class_name}] Внутренний атрибут `%{internal_name}` получил значение `%{value}`, которое меньше `%{option_value}`"
             max:
               default: "[%{service_class_name}] Внутренний атрибут `%{internal_name}` получил значение `%{value}`, которое больше `%{option_value}`"
+            multiple_of:
+              default: "[%{service_class_name}] Внутренний атрибут `%{internal_name}` имеет значение `%{value}`, которое не кратно `%{option_value}`"
+              blank: "[%{service_class_name}] Внутренний атрибут `%{internal_name}` имеет недопустимое значение `%{option_value}` в опции `%{option_name}`"
+              divided_by_0: "[%{service_class_name}] Внутренний атрибут `%{internal_name}` имеет недопустимое значение `%{option_value}` в опции `%{option_name}`"
+            schema:
+              wrong_type: "[%{service_class_name}] Неправильный тип внутреннего атрибута `%{internal_name}`, ожидалось `%{expected_type}`, получено `%{given_type}`"
+              wrong_element_type: "[%{service_class_name}] Неправильный тип в хеше внутреннего атрибута `%{internal_name}`, для `%{key_name}` ожидалось `%{expected_type}`, получено `%{given_type}`"
+              wrong_element_value: "[%{service_class_name}] Неправильное значение в хеше внутреннего атрибута `%{internal_name}`, для `%{key_name}` ожидалось значение с типом `%{expected_type}`, получено `%{given_type}`"
         type:
           default_error:
             default: "[%{service_class_name}] Неправильный тип внутреннего атрибута `%{internal_name}`, ожидалось `%{expected_type}`, получено `%{given_type}`"
-            for_hash:
-              wrong_element_type: "[%{service_class_name}] Неправильный тип в хеше внутреннего атрибута `%{internal_name}`, для `%{key_name}` ожидалось `%{expected_type}`, получено `%{given_type}`"
     outputs:
       undefined:
-        getter: "[%{service_class_name}] Неизвестный атрибут `%{output_name}`"
-        setter: "[%{service_class_name}] Неизвестный атрибут `%{output_name}`"
+        for_fetch: "[%{service_class_name}] Неизвестный атрибут `%{output_name}`"
+        for_assign: "[%{service_class_name}] Неизвестный атрибут `%{output_name}`"
       validations:
-        inclusion:
-          default_error: "[%{service_class_name}] Неправильное значение в `%{output_name}`, должно быть одним из `%{output_inclusion}`"
         must:
           default_error: "[%{service_class_name}] Атрибут `%{output_name}` должен \"%{code}\""
           syntax_error: "[%{service_class_name}] Синтаксическая ошибка внутри `%{code}` атрибута `%{output_name}`: %{exception_message}"
@@ -90,12 +100,20 @@ ru:
               default: "[%{service_class_name}] Атрибут `%{output_name}` не соответствует формату `%{format_name}`"
               wrong_pattern: "[%{service_class_name}] Атрибут `%{output_name}` не соответствует формату `%{format_name}`"
               unknown: "[%{service_class_name}] Указан неизвестный формат `%{format_name}` у атрибута `%{output_name}`"
+            inclusion:
+              default: "[%{service_class_name}] Неправильное значение в `%{output_name}`, должно быть одним из `%{output_inclusion}`, получено `%{value}`"
             min:
               default: "[%{service_class_name}] Атрибут `%{output_name}` получил значение `%{value}`, которое меньше `%{option_value}`"
             max:
               default: "[%{service_class_name}] Атрибут `%{output_name}` получил значение `%{value}`, которое больше `%{option_value}`"
+            multiple_of:
+              default: "[%{service_class_name}] Атрибут `%{output_name}` имеет значение `%{value}`, которое не кратно `%{option_value}`"
+              blank: "[%{service_class_name}] Атрибут `%{output_name}` имеет недопустимое значение `%{option_value}` в опции `%{option_name}`"
+              divided_by_0: "[%{service_class_name}] Атрибут `%{output_name}` имеет недопустимое значение `%{option_value}` в опции `%{option_name}`"
+            schema:
+              wrong_type: "[%{service_class_name}] Неправильный тип атрибута `%{output_name}`, ожидалось `%{expected_type}`, получено `%{given_type}`"
+              wrong_element_type: "[%{service_class_name}] Неправильный тип в хеше атрибута `%{output_name}`, для `%{key_name}` ожидалось `%{expected_type}`, получено `%{given_type}`"
+              wrong_element_value: "[%{service_class_name}] Неправильное значение в хеше атрибута `%{output_name}`, для `%{key_name}` ожидалось значение с типом `%{expected_type}`, получено `%{given_type}`"
         type:
           default_error:
             default: "[%{service_class_name}] Неправильный тип атрибута `%{output_name}`, ожидалось `%{expected_type}`, получено `%{given_type}`"
-            for_hash:
-              wrong_element_type: "[%{service_class_name}] Неправильный тип в хеше атрибута `%{output_name}`, для `%{key_name}` ожидалось `%{expected_type}`, получено `%{given_type}`"
